// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders correctly 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ArticleTopics />
    </nav>
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
    <RelatedArticleSlice
      heading="Related Articles"
    />
  </div>,
  <div
    id="sponsored-article-container"
  >
    <div
      id="sponsored-article"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    commentingConfig={
      Object {
        "account": Object {
          "current": "CurrentSpotID",
          "readonly": "ReadOnlySpotID",
        },
        "switchOver": "2020-08-10T16:00:00.000Z",
      }
    }
    isEnabled={true}
  />,
]
`;

exports[`2. no related articles, topics and comments when user not logged in, only sponsored div 1`] = `
<div
  id="sponsored-article-container"
>
  <div
    id="sponsored-article"
  />
</div>
`;

exports[`3. read only comments when the user is a share token reader 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ArticleTopics />
    </nav>
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
    <RelatedArticleSlice
      heading="Related Articles"
    />
  </div>,
  <div
    id="sponsored-article-container"
  >
    <div
      id="sponsored-article"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    commentingConfig={
      Object {
        "account": Object {
          "current": "CurrentSpotID",
          "readonly": "ReadOnlySpotID",
        },
        "switchOver": "2020-08-10T16:00:00.000Z",
      }
    }
    isEnabled={true}
    isReadOnly={true}
  />,
]
`;

exports[`4. renders the additional related articles 1`] = `
Array [
  <div />,
  <div>
    <nav
      data-cy="topic-tags"
    >
      <ArticleTopics />
    </nav>
  </div>,
  <div
    id="related-articles"
  >
    <RelatedArticles
      isVisible={true}
    />
    <RelatedArticleSlice
      heading="Related Articles"
    />
  </div>,
  <div
    id="sponsored-article-container"
  >
    <div
      id="sponsored-article"
    />
  </div>,
  <ArticleComments
    articleId="dummy-article-id"
    commentingConfig={
      Object {
        "account": Object {
          "current": "CurrentSpotID",
          "readonly": "ReadOnlySpotID",
        },
        "switchOver": "2020-08-10T16:00:00.000Z",
      }
    }
    isEnabled={true}
  />,
]
`;
